@@ -1,5 +1,8 @@
 2000-11-20  John Harper  <jsh@eazel.com>
 
+	* sawfish/wm/animation/outline.jl (make-outline-animator): new
+	exported function. Fixes #4816
+
 	* sawfish/wm/focus.jl: removed all code to support the
 	focus-click-through option on non-client windows (mfleming
 	convinced me it was a bad idea, and it fixes a hard bug)
